src/components/app/Header/index.css
.Header {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: space-between;
  backdrop-filter: blur(5px);
  top: 0;
  width: 100%;
  box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.2);
  background-color: rgba(255, 255, 255, 0.75);
  z-index: 199;
  height: 54px;
}

.Header-Menu-Wrap {
  display: flex;
  align-items: center;
  margin-left: 12px;
}

.Header-Logo {
  font-size: 18px;
}

.Header-Search-Wrap {
  transform: scale(0.9);
  margin-right: 8px;
}

